Changes to lab6

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Ladies Mobile Notary Service</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Little Ladies Mobile Notary Services</h1>
    
      <h2>We Can Supply All Your Legal Documentation Needs</h2>
-    <header>Owner Operator</header>
+     <div>About Us</div>
+    <p>Owner Operator</p>
     <p> Andrea Malone</p>
     <p>Contact Number 615-777-9311</p>
 
     <main>
         <img src="img/mj-s-cw2ai6A_eeM-unsplash.jpg" alt="">
     </main>
+    >
  
 </body>
 
