--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <h1>Little Ladies Mobile Notary Services</h1>
    
      <h2>We Can Supply All Your Legal Documentation Needs</h2>
-     <div>About Us</div>
+           
+        <h3>About Us</h3> 
     <p>Owner Operator</p>
     <p> Andrea Malone</p>
     <p>Contact Number 615-777-9311</p>
@@ -19,6 +20,8 @@
     <main>
         <img src="img/mj-s-cw2ai6A_eeM-unsplash.jpg" alt="">
     </main>
+    <div>Products</div>
+    
     >
  
 </body>
