changes for lab 7x

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <main>
         <img src="img/mj-s-cw2ai6A_eeM-unsplash.jpg" alt="">
     </main>
-    <div>Products</div>
-    
-    >
+    <div>Store Hours</div>
+    <h1>24 hours</h1>
+
+   
  
 </body>
 
