updatated java amd index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <main>
         <img src="img/mj-s-cw2ai6A_eeM-unsplash.jpg" alt="">
     </main>
+    <div>PRODUCTS</div>
+
+    <h1>Mortgage Title Documents</h1>
+    <h2>Estate Documents</h2>
+    <h3>Family Planning Documents</h3>
+
+    <li><a href ="product-1.js"
+
     <div>Store Hours</div>
     <h1>24 hours</h1>
 
