--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <h2>Estate Documents</h2>
     <h3>Family Planning Documents</h3>
 
-    <li><a href ="product-1.js"
+    <li><a href ="product-1.js"></a></li>
 
-    <div>Store Hours</div>
-    <h1>24 hours</h1>
+    <h1>Store Hours</h1>S
+    <h2>24 hours</h2>
 
    
  
