Added addional sales pae and js

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
     <h2>Estate Documents</h2>
     <h3>Family Planning Documents</h3>
 
+    <p>
+   <ul>    
     <li><a href ="product-1.js"></a></li>
+    <li><a href-="sales.html">Sales</a></li>
+    <ul>
 
-    <h1>Store Hours</h1>S
+    <h1>Store Hours</h1>
     <h2>24 hours</h2>
 
    
