--- a/product-1.html
+++ b/product-1.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>
-            <h1>Snicker Doodle Cookies</h1>
+            <h1>Notary</h1>
         </header>
         <main></main>
         <footer></footer>
