--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <h1>Mortgage Title Documents</h1>
     <h2>Estate Documents</h2>
     <h3>Family Planning Documents</h3>
-
+  
     <p>
-   <ul>    
-    <li><a href ="product-1.js"></a></li>
-    <li><a href-="sales.html">Sales</a></li>
-    <ul>
+        <ul>    
+            <li><a href="product-1.js"></a></li>
+            <li><a href="sales.html">Sales</a></li>
+        </ul>
+    </p>    
 
     <h1>Store Hours</h1>
     <h2>24 hours</h2>
