--- a/sales.html
+++ b/sales.html
@@ -16,7 +16,12 @@
 
       
     </header>
-    <main></main>
+    <main>
+        <form id="new location">
+            <label id="store name">Name</label>
+        </form>
+        <h2>Nashville</h2>
+    </main>
     <footer></footer>
     <script src="app.js"></script>
 </body>
